be able to add activities

--- a/project/web/css/link.css
+++ b/project/web/css/link.css
@@ -2,7 +2,10 @@ a:link {
     color: blue);
     text-decoration: none
 }
-
+a:visited {
+    color: blueviolet;
+    text-decoration: none
+}
 a:hover {
     color: #ff7f24;
     text-decoration: underline;
