创建活动时在user_activity表中也应该增加记录 && 活动管理页面

--- a/project/web/css/link.css
+++ b/project/web/css/link.css
@@ -1,13 +1,13 @@
-a:link {
-    color: blue);
+.login:link {
+    color: blue;
     text-decoration: none
 }
 
-a:hover {
+.login:hover {
     color: #ff7f24;
     text-decoration: underline;
 }
-a:active {
+.login:active {
     color: #ff7f24;
     text-decoration: underline;
 }
