--- a/project/web/css/login.css
+++ b/project/web/css/login.css
@@ -304,7 +304,7 @@ ul {
 /*--background --*/
 
 body {
-	position: absolute;
+	/* position: absolute;*/
 	background: url(../pictures/Artistic-interpretation-of-the-Laser-broom-050614003F0F9F90.jpg);
 	background-repeat: no-repeat;
 	background-position: center;
