--- a/project/web/html/assets/css/style.css
+++ b/project/web/html/assets/css/style.css
@@ -1185,6 +1185,7 @@ header .form-inline {
 
 .content {
   float: left;
+  margin-top: 50px;
   padding: 1.875em;
   width: 100%; }
 
@@ -2316,7 +2317,8 @@ footer.site-footer {
     top: 51px !important; }
 
   .content {
-    padding: 1.25em; }
+    padding: 1.25em; 
+    margin-top: 50px;}
 
   .flotRealtime2 {
     height: 330px; }
